# genai_ragbase-application

./: main.py  pyproject.toml
